--- a/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
@@ -67,7 +67,7 @@
                                     <th style="width:10%">Region Name</th>
                                   
                                     <th style="width:5%">Action</th>
-                                    <th class="hide ddldivname"</th>
+                                    <th class="hide ddldivname"></th>
                                 </tr>
                             </thead>
                             <tbody></tbody>
