--- a/ERPWeb/Views/AgroConfiguration/AreaList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/AreaList.cshtml
@@ -247,7 +247,7 @@
 
 
             OpenModal();
-            $("#spanModalHead").text('Update Division');
+            $("#spanModalHead").text('Update Area');
             $("#spanSaveText").text('Update');
         })
 
