--- a/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
@@ -144,7 +144,7 @@
 
         //add
         $("#addButton").click(function (e) {
-            alert();
+            //alert();
             debugger;
             e.preventDefault();
 
@@ -198,7 +198,7 @@
 
         //save
         $("#saveButton").click(function (e) {
-            alert();
+            //alert();
             debugger;
             e.preventDefault();
   
