--- a/ERPWeb/Views/AgroConfiguration/Regionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Regionlist.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "RegionList";
+    var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 
 
@@ -7,6 +8,7 @@
     <div class="col-md-12">
 
         <div class="card card-primary card-outline card-tabs" style="margin-top:-20px">
+
             <div class="card-header p-0 pt-1 border-bottom-0">
                 <ul class="nav nav-tabs" id="custom-tabs-two-tab" role="tablist">
                     <li class="nav-item">
@@ -46,7 +48,7 @@
                                         <div class="row">
                                             <h4 class="col-md-2">Search By</h4>
                                             <div class="col-md-3">
-                                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By Any" />
+                                                <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search By Any" />
                                             </div>
                                         </div>
                                     </div>
@@ -69,6 +71,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
     </div>
@@ -76,51 +79,50 @@
 
 @*modal*@
 <div class="modal" id="regionmodal" role="dialog">
-<div class="modal-dialog" role="document">
-    <div class="modal-content">
-        <div class="modal-header alert-secondary">
-            <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        </div>
-        <div class="modal-body">
-            <form id="formregion">
-                <input type="hidden" id="hdregiontId" />
-                <div class="form-row">
-                    <div class="form-group col-md-12">
-                        <label for="ddldivname" class="control-label">DivisionName</label>
-                        @Html.DropDownList("ddldivname", (IEnumerable<SelectListItem>)ViewBag.ddldivname, "Select divName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                        <span class="error hide required-DivisionName font-weight-bold">Input DivisionName!</span>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <label for="ddlRegionName" class="control-label">RegionName</label>
-                        <input type="text" id="ddlRegionName" class="form-control form-control-sm" />
-                        <span class="error hide required-RegionName font-weight-bold">Input RegionName Name!</span>
-                        <span class="error hide duplicate-RegionName font-weight-bold">Already RegionName Exist!</span>
-                    </div>
-                    <div class="form-group col-md-12">
-                        <label for="ddlstatus" class="control-label">Status</label>
-                        <input type="text" id="ddlstatus" class="form-control form-control-sm" />
-                        <span class="error hide required-status font-weight-bold">Input status!</span>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-
-        <div class="modal-footer btn-default">
-            <div class="col-md-6">
-                <div id="msg1" class="alert alert-success hide float-left">
-                    Data has been saved Successful!
-                </div>
-                <div id="msg2" class="alert alert-danger hide float-left">
-                    Data has been failed to save!
-                </div>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header alert-secondary">
+                <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
-            <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
-            <button type="submit" class="btn btn-outline-success btn-sm float-right" id="saveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextRegion">Save</span> </button>
+            <div class="modal-body">
+                <form id="formregion">
+                    <input type="hidden" id="hdregiontId" />
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="ddldivname" class="control-label">DivisionName</label>
+                            @Html.DropDownList("ddldivname", (IEnumerable<SelectListItem>)ViewBag.ddldivname, "Select divName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            <span class="error hide required-DivisionName font-weight-bold">Input DivisionName!</span>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="ddlRegionName" class="control-label">RegionName</label>
+                            <input type="text" id="ddlRegionName" class="form-control form-control-sm" />
+                            <span class="error hide required-RegionName font-weight-bold">Input RegionName Name!</span>
+                            <span class="error hide duplicate-RegionName font-weight-bold">Already RegionName Exist!</span>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="ddlstatus" class="control-label">Status</label>
+                            <input type="text" id="ddlstatus" class="form-control form-control-sm" />
+                            <span class="error hide required-status font-weight-bold">Input status!</span>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="modal-footer btn-default">
+                <div class="col-md-6">
+                    <div id="msg1" class="alert alert-success hide float-left">
+                        Data has been saved Successful!
+                    </div>
+                    <div id="msg2" class="alert alert-danger hide float-left">
+                        Data has been failed to save!
+                    </div>
+                </div>
+                <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
+                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="saveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextRegion">Save</span> </button>
+            </div>
         </div>
     </div>
-</div>
 </div>
 
 
@@ -136,10 +138,11 @@
         var ddldivname = $("#ddldivname");
         var ddlRegionName = $("#ddlRegionName");
         var ddlstatus = $("#ddlstatus");
+        var searchByAny = $("#searchByAny");
 
         //var SearchAny = $("#SearchAny");
 
-       
+
 
         $(document).ready(function () {
             $('.select2').select2();
@@ -155,13 +158,14 @@
             LoadRegionDataTable();
         }
 
-        //SearchAny.keyup(function () {
-        //    LoadRegionDataTable()
-        //})
+        SearchAny.keyup(function () {
+            LoadRegionDataTable()
+        })
 
         function LoadRegionDataTable() {
-            debugger;
-            var data = { flag: "View"/*, name: $.trim(SearchAny.val())*/ }
+            debugger
+           // alert("here me 2");
+            var data = { flag: "View", name: $.trim(searchByAny.val()) }
             $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/Regionlist', data)).then(function (res, status) {
                 console.log(res);
                 if (status == "success") {
@@ -175,14 +179,15 @@
 
         //opemmodal
         function OpenModal() {
-            $("#spanModalHead").text("Add New Zone");
-            $("#spanSaveTextRegion").text('Save');
             $("#regionmodal").modal("show");
-            $(".error").addClass("hide");
+            //$("#spanModalHead").text("Add New Zone");
+            //$("#spanSaveTextRegion").text('Save');
+            //$("#regionmodal").modal("show");
+            //$(".error").addClass("hide");
         }
 
 
-   
+
         //editbuttun
         $(document).on("click", "a.data-edit-item-Region", function (e) {
             //alert();
@@ -212,14 +217,15 @@
 
             OpenModal();
             $("#spanModalHead").text('Update Region');
-            $("#spanSaveTextZone").text('Update');
+            $("#spanSaveTextRegion").text('Update');
+            //spanSaveTextRegion
         })
 
 
         //savemodal
         $("#saveButton").click(function (e) {
             //alert();
-           //debugger;
+            //debugger;
             e.preventDefault();
             $(".error").addClass("hide");
 
@@ -232,20 +238,20 @@
                     console.log(status);
                     console.log(res);
                     if (res == true) {
-                        $("#zonemodal").modal("toggle");
+                        //$("#zonemodal").modal("toggle");
                         toastrSuccessAlert(execuStatus.successSave);
+                        //alert("Here Me");
+                        $("#regionmodal").modal("hide");
+
                         LoadRegionDataTable();
                     }
                     else {
-                        message("#msg2");
+                        //message("#msg2");
                         toastrErrorAlert(execuStatus.fail);
                         alert("This Zone Already Exist");
                     }
-                    enable("#saveButton");
-                }).fail(function (err) {
-                    console.log(err);
-                    enable("#saveButton");
-                });
+                    // enable("#saveButton");
+                })
             }
         });
 
@@ -271,6 +277,10 @@
 
             return Isvalid
 
+        }
+
+        function redirectPage(page) {
+            window.location.replace(page);
         }
     </script>
 }
