--- a/ERPWeb/Views/AgroConfiguration/CreateTerritorylist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateTerritorylist.cshtml
@@ -22,11 +22,11 @@
 
             <div class="card-body text-sm">
                 <div class="row " style="margin-top:-8px;">
-                    <div class="col-md-2">
+                    @*<div class="col-md-2">
                         <label for="ddlorgname" class="control-label">OrganizationName</label>
                         @Html.DropDownList("ddlorgname", (IEnumerable<SelectListItem>)ViewBag.ddlorgname, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                         <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
-                    </div>
+                    </div>*@
 
                     <div class="col-md-2">
                         <label for="ddlareaname" class="control-label">AreaName</label>
@@ -65,7 +65,6 @@
                                     <th style="width:10%">AreaName</th>
                                     <th style="width:10%">TerritoryName</th>
                                     <th style="width:5%">Action</th>
-                                    <th class="hide ddlareaname"></th>
                                     <th class="hide ddlareaname"></th>
                                 </tr>
                             </thead>
@@ -158,7 +157,7 @@
 
 
         //save
-        @*$("#saveButton").click(function (e) {
+        $("#saveButton").click(function (e) {
             alert();
             debugger;
             e.preventDefault();
@@ -169,13 +168,13 @@
                 var tds = $(this).children('td');
                 details.push({
 
-                    RegionId: 0,
-                    RegionName: tds.eq(2).html(),
+                    TerritoryId: 0,
+                    TerritoryName: tds.eq(2).html(),
                     //RegionAsignName: tds.eq(4).html(),
                     //MobileNumber: tds.eq(5).html(),
                     //Remarks: tds.eq(6).html(),
                     //ZoneId: tds.eq(8).html(),
-                    DivisionId: tds.eq(4).html(),
+                    AreaId: tds.eq(4).html(),
 
 
                 });
@@ -183,12 +182,12 @@
             console.log(details);
             var data = JSON.stringify({ details: details });
 
-            $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveRegionInfo', data, getToken())).then(function (res, status) {
+            $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveTerritoryInfo', data, getToken())).then(function (res, status) {
                 if (res === true) {
                     debugger;
                     $('.toastrDefaultSuccess').trigger('click');
                     setTimeout(function () {
-                        redirectPage('@Url.Action("Regionlist")');
+                        redirectPage('@Url.Action("Territorylist")');
                     }, 1000);
                 }
                 else {
@@ -204,7 +203,7 @@
                 window.location.replace(page);
             }
 
-        });*@
+        });
 
 
         //validation
