--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -9,7 +9,7 @@
                 <th class="hide">id</th>
                 <th>SL</th>
                 <th class="hide">depotid</th>
-                <th>Organization name</th>
+                @*<th>Organization name</th>*@
                 <th>Depot Name</th>
                 <th>Raw Material</th>
                 @*<th>Expire Date</th>*@
@@ -29,7 +29,7 @@
                 <td class="hide">@raw.RawMaterialId</td>
                 <td>@sl</td>
                 <td class="hide">@raw.DepotId</td>
-                <td>@raw.OrganizationName</td>
+                <td class="hide">@raw.OrganizationName</td>
                 <td>@raw.DepotName</td>
                 <td>@raw.RawMaterialName</td>
                 @*<td>@raw.ExpireDate.Value.ToShortDateString()</td>*@
