--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -63,12 +63,12 @@
                 <form id="formdepot">
                     <input type="hidden" id="hddepotId" />
                     <div class="form-row">
-                        <div class="form-group col-md-8">
+                        @*<div class="form-group col-md-8">
                             <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
                             @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
                             
-                        </div>
+                        </div>*@
                         <div class="form-group col-md-8">
                             <label for="ddlDepotName" class="control-label">DepotName</label>
                             <input type="text" id="ddlDepotName" class="form-control form-control-sm" />
@@ -112,7 +112,7 @@
         //DepotList
         var hddepotId = $("#hddepotId");
         var searchByAny = $("#searchByAny");
-        var ddlOrganizationName = $("#ddlOrganizationName");
+        //var ddlOrganizationName = $("#ddlOrganizationName");
         var ddlStatus = $("#ddlStatus");
         var ddlDepotName = $("#ddlDepotName");
 
@@ -160,7 +160,7 @@
             $(".error").addClass("hide");
             if (formValidations() == true) {
                 debugger;
-                var data = JSON.stringify({ DepotId: TryParseInt(hddepotId.val(), 0), OrganizationId: TryParseInt(ddlOrganizationName.val(), 0), DepotName: ddlDepotName.val(), Status: ddlStatus.val() });
+                var data = JSON.stringify({ DepotId: TryParseInt(hddepotId.val(), 0),  DepotName: ddlDepotName.val(), Status: ddlStatus.val() });
                 console.log(data);
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveDepotInfo', data, getToken())).then(function (res, status) {
                     console.log(status);
@@ -187,10 +187,10 @@
         function formValidations() {
             Isvalid = true;
             $('.error').addClass("hide");
-            if ($.trim(ddlOrganizationName.val()) == 0) {
-                $('.required-OrganizationName').removeClass("hide");
-                Isvalid = false;
-            }
+            //if ($.trim(ddlOrganizationName.val()) == 0) {
+            //    $('.required-OrganizationName').removeClass("hide");
+            //    Isvalid = false;
+            //}
             if ($.trim(ddlDepotName.val()) == 0) {
                 $('.required-DepotName').removeClass("hide");
                 Isvalid = false;
@@ -214,19 +214,21 @@
 
         $(document).on("click", "a.data-edit-item-Depot", function (e) {
             //alert();
-            //debugger;
+            debugger;
             e.preventDefault()
             clearCtrlDepot();
             var row = $(this).parent().parents('tr');
             var td1 = row.find('td:eq(1)').html();
+            //var td2 = row.find('td:eq(2)').html();
             var td2 = row.find('td:eq(2)').html();
             var td3 = row.find('td:eq(3)').html();
             var td4 = row.find('td:eq(4)').html();
             var td5 = row.find('td:eq(5)').html();
             var td6 = row.find('td:eq(6)').html();
+            
 
             hddepotId.val(td1);
-            ddlOrganizationName.val(td2);
+            //ddlOrganizationName.val(td2);
             ddlDepotName.val(td4);
             ddlStatus.val(td6);
             //ddlStatus.prop("checked", false);
@@ -259,7 +261,7 @@
         })
         function clearCtrlDepot() {
             ddlDepotName.val("");
-            ddlOrganizationName.val('');
+           // ddlOrganizationName.val('');
             hddepotId.val('0');
            // ddlStatus.val("");
 
