--- a/ERPWeb/Views/AgroConfiguration/_GetDepotPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetDepotPartialView.cshtml
@@ -12,7 +12,7 @@
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle" class="hide"></th>
-                    <th style="vertical-align:middle">Organization Name</th>
+                    @*<th style="vertical-align:middle">Organization Name</th>*@
                     <th style="vertical-align:middle">Depot Name</th>
                     <th style="vertical-align:middle">EntryUser</th>
                     <th style="vertical-align:middle">Status</th>
@@ -28,7 +28,7 @@
                     <td class="text-center text-bold">@SL</td>
                     <td class="hide">@item.DepotId</td>
                     <td class="hide">@item.OrganizationId</td>
-                    <td class="text-center">@item.OrganizationName</td>
+                    <td class="text-center hide">@item.OrganizationName</td>
                     <td class="text-center">@item.DepotName</td>
                     <td class="text-center">@item.UserName</td>
                     <td class="text-center">@item.Status</td>
