--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -12,6 +12,8 @@
                 @*<th>Organization name</th>*@
                 <th>Depot Name</th>
                 <th>Raw Material</th>
+                @*<th>Entry User</th>*@
+                <th>Status</th>
                 @*<th>Expire Date</th>*@
                 <th class="hide">organizationId</th>
                 <th>Action</th>
@@ -32,6 +34,8 @@
                 <td class="hide">@raw.OrganizationName</td>
                 <td>@raw.DepotName</td>
                 <td>@raw.RawMaterialName</td>
+                @*<td>@raw.UserName</td>*@
+                <td>@raw.Status</td>
                 @*<td>@raw.ExpireDate.Value.ToShortDateString()</td>*@
                 <td class="hide">@raw.OrganizationId</td>
                 <td>
