--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueStockList.cshtml
@@ -37,9 +37,9 @@
                         <i class="fas fa-pen"></i>
                     </a>
 
-                    <a href="#" class="btn btn-outline-danger data-item-del" title="Delete" data-del-item="@item.RawMaterialIssueStockId" style="line-height:1">
+                    @*<a href="#" class="btn btn-outline-danger data-item-del" title="Delete" data-del-item="@item.RawMaterialIssueStockId" style="line-height:1">
                         <i class="fas fa-trash"></i>
-                    </a>
+                    </a>*@
 
 
                 </td>
